; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_journal-verify.c_flush_progress.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_journal-verify.c_flush_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @flush_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_progress() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @on_tty()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %25

6:                                                ; preds = %0
  %7 = call i32 (...) @columns()
  %8 = mul nsw i32 3, %7
  %9 = sdiv i32 %8, 4
  store i32 %9, i32* %1, align 4
  %10 = call i32 @putchar(i8 signext 13)
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %18, %6
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* %1, align 4
  %14 = add i32 %13, 5
  %15 = icmp ult i32 %12, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %11
  %17 = call i32 @putchar(i8 signext 32)
  br label %18

18:                                               ; preds = %16
  %19 = load i32, i32* %2, align 4
  %20 = add i32 %19, 1
  store i32 %20, i32* %2, align 4
  br label %11

21:                                               ; preds = %11
  %22 = call i32 @putchar(i8 signext 13)
  %23 = load i32, i32* @stdout, align 4
  %24 = call i32 @fflush(i32 %23)
  br label %25

25:                                               ; preds = %21, %5
  ret void
}

declare dso_local i32 @on_tty(...) #1

declare dso_local i32 @columns(...) #1

declare dso_local i32 @putchar(i8 signext) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
